# kyc_docs

./: AGENTS.md  test.html
backend/: .gitignore  package-lock.json  package.json
backend/src/: app.module.ts  main.ts  seed.ts
backend/src/audit/: audit.controller.ts  audit.module.ts  audit.service.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/clients/: clients.controller.ts  clients.module.ts  clients.service.ts
backend/src/database/: database.module.ts  drizzle.provider.ts
backend/src/document-types/: document-types.controller.ts  document-types.service.ts
backend/src/documents/: documents.controller.ts  documents.module.ts  documents.service.ts  multipart.util.ts
backend_java/: .env.example  .gitignore  Dockerfile  build.gradle.kts  docker-compose.yml  gradle.properties  gradlew  settings.gradle.kts
backend_python/: .env.example  .gitignore  alembic.ini  pyproject.toml
backend_python/alembic/: env.py
backend_python/alembic/versions/: 001_initial_schema.py  002_audit_log.py
backend_python/app/: main.py
backend_python/app/api/v1/: __init__.py  auth.py  permissions.py  setup.py  users.py
backend_python/app/core/: config.py  database.py  deps.py  encryption.py  security.py
backend_python/app/models/: __init__.py  audit_log.py  document_type.py  permission.py  recovery_code.py  user.py  user_permission.py
backend_python/app/schemas/: auth.py  setup.py  user.py
backend_python/app/services/: audit_service.py  auth_service.py  permission_service.py  setup_service.py  user_service.py
backend_python/tests/: conftest.py  test_auth.py  test_setup.py  test_users.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
(+231 files in other folders)
