[project]
name = "kyc-docs-api"
version = "0.1.0"
description = "KYC Document Management API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.49.0",
    "sqlmodel>=0.0.38",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.14.1",
    "cryptography>=49.0.0",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=4.0.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.2",
    "python-multipart>=0.0.9",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "mypy>=1.11.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "PIE", "T20", "ERA", "PL", "PTH", "SIM", "RET"]
ignore = ["S101", "S106", "B008", "PLR2004", "E712"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = true
strict_optional = true
no_implicit_reexport = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["app.models.*", "app.services.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["app.core.deps"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]